# pdf-ocr-rl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: grpo_qwen3vl2b.yaml  grpo_qwen3vl2b_v3.yaml  grpo_train.yaml
docs/: literature_review.md
results/: RESULTS.md  base_results.json  evaluation_comparison.json  finetuned_results.json
results/eval_final/: sft200_comparison.json  v2_sft_grpo_comparison.json  v3_comparison.json
scripts/: create_dataset.py  eval_standalone.py  evaluate.py  runpod_launch.py  runpod_train.sh  train_grpo.py  train_sft.py  train_v3.py  upload_to_hf.py
src/pdf_ocr_rl/: __init__.py
src/pdf_ocr_rl/data/: collect_markdown.py  dataset.py  render_pdf.py
src/pdf_ocr_rl/eval/: metrics.py
src/pdf_ocr_rl/models/: loader.py
src/pdf_ocr_rl/reward/: composite.py
tests/: test_metrics.py  test_render_pdf.py  test_reward.py
