[project]
name = "pdf-ocr-rl"
version = "0.1.0"
description = "GRPO fine-tuning of multimodal VLM for PDF-to-markdown conversion"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "torchvision>=0.21",
    "transformers>=4.48",
    "datasets>=3.0",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "requests>=2.31",
    "tqdm>=4.65",
    "Levenshtein>=0.25",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
train = [
    "trl>=0.24",
    "peft>=0.14",
    "bitsandbytes>=0.45",
    "qwen-vl-utils>=0.0.8",
]
data = [
    "weasyprint>=62.0",
    "markdown>=3.7",
    "pymupdf>=1.25",
    "pdf2image>=1.17",
]
hub = [
    "huggingface-hub>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_ocr_rl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
